
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int type ;
struct ib_flow {int dummy; } ;
struct mlx4_ib_flow {TYPE_1__* reg_id; struct ib_flow ibflow; } ;
struct mlx4_dev {int dummy; } ;
struct ib_qp {TYPE_3__* device; } ;
struct ib_flow_attr {int port; int flags; int type; } ;
typedef enum mlx4_net_trans_promisc_mode { ____Placeholder_mlx4_net_trans_promisc_mode } mlx4_net_trans_promisc_mode ;
struct TYPE_6__ {int phys_port_cnt; } ;
struct TYPE_5__ {struct mlx4_dev* dev; } ;
struct TYPE_4__ {int mirror; int id; } ;


 int ARRAY_SIZE (int*) ;
 int EINVAL ;
 int ENOMEM ;
 int EOPNOTSUPP ;
 struct ib_flow* ERR_PTR (int) ;
 int GFP_KERNEL ;

 int IB_FLOW_ATTR_FLAGS_DONT_TRAP ;



 int MLX4_FS_ALL_DEFAULT ;
 int MLX4_FS_MC_DEFAULT ;
 int MLX4_FS_MIRROR_RX_PORT ;
 int MLX4_FS_MIRROR_SX_PORT ;
 int MLX4_FS_REGULAR ;
 int __mlx4_ib_create_flow (struct ib_qp*,struct ib_flow_attr*,int,int,int *) ;
 int __mlx4_ib_destroy_flow (struct mlx4_dev*,int ) ;
 int kfree (struct mlx4_ib_flow*) ;
 struct mlx4_ib_flow* kzalloc (int,int ) ;
 int memset (int*,int ,int) ;
 int mlx4_ib_add_dont_trap_rule (struct mlx4_dev*,struct ib_flow_attr*,int*) ;
 int mlx4_ib_tunnel_steer_add (struct ib_qp*,struct ib_flow_attr*,int *) ;
 int mlx4_is_bonded (struct mlx4_dev*) ;
 TYPE_2__* to_mdev (TYPE_3__*) ;
 int unlikely (int) ;

__attribute__((used)) static struct ib_flow *mlx4_ib_create_flow(struct ib_qp *qp,
        struct ib_flow_attr *flow_attr,
        int domain)
{
 int err = 0, i = 0, j = 0;
 struct mlx4_ib_flow *mflow;
 enum mlx4_net_trans_promisc_mode type[2];
 struct mlx4_dev *dev = (to_mdev(qp->device))->dev;
 int is_bonded = mlx4_is_bonded(dev);

 if (flow_attr->port < 1 || flow_attr->port > qp->device->phys_port_cnt)
  return ERR_PTR(-EINVAL);

 if ((flow_attr->flags & IB_FLOW_ATTR_FLAGS_DONT_TRAP) &&
     (flow_attr->type != 129))
  return ERR_PTR(-EOPNOTSUPP);

 memset(type, 0, sizeof(type));

 mflow = kzalloc(sizeof(*mflow), GFP_KERNEL);
 if (!mflow) {
  err = -ENOMEM;
  goto err_free;
 }

 switch (flow_attr->type) {
 case 129:




  if (unlikely(flow_attr->flags & IB_FLOW_ATTR_FLAGS_DONT_TRAP)) {
   err = mlx4_ib_add_dont_trap_rule(dev,
        flow_attr,
        type);
   if (err)
    goto err_free;
  } else {
   type[0] = MLX4_FS_REGULAR;
  }
  break;

 case 131:
  type[0] = MLX4_FS_ALL_DEFAULT;
  break;

 case 130:
  type[0] = MLX4_FS_MC_DEFAULT;
  break;

 case 128:
  type[0] = MLX4_FS_MIRROR_RX_PORT;
  type[1] = MLX4_FS_MIRROR_SX_PORT;
  break;

 default:
  err = -EINVAL;
  goto err_free;
 }

 while (i < ARRAY_SIZE(type) && type[i]) {
  err = __mlx4_ib_create_flow(qp, flow_attr, domain, type[i],
         &mflow->reg_id[i].id);
  if (err)
   goto err_create_flow;
  if (is_bonded) {



   flow_attr->port = 2;
   err = __mlx4_ib_create_flow(qp, flow_attr,
          domain, type[j],
          &mflow->reg_id[j].mirror);
   flow_attr->port = 1;
   if (err)
    goto err_create_flow;
   j++;
  }

  i++;
 }

 if (i < ARRAY_SIZE(type) && flow_attr->type == 129) {
  err = mlx4_ib_tunnel_steer_add(qp, flow_attr,
            &mflow->reg_id[i].id);
  if (err)
   goto err_create_flow;

  if (is_bonded) {
   flow_attr->port = 2;
   err = mlx4_ib_tunnel_steer_add(qp, flow_attr,
             &mflow->reg_id[j].mirror);
   flow_attr->port = 1;
   if (err)
    goto err_create_flow;
   j++;
  }

  i++;
 }

 return &mflow->ibflow;

err_create_flow:
 while (i) {
  (void)__mlx4_ib_destroy_flow(to_mdev(qp->device)->dev,
          mflow->reg_id[i].id);
  i--;
 }

 while (j) {
  (void)__mlx4_ib_destroy_flow(to_mdev(qp->device)->dev,
          mflow->reg_id[j].mirror);
  j--;
 }
err_free:
 kfree(mflow);
 return ERR_PTR(err);
}
